broke the coordinates for map

--- a/app/static/maraudersmap/index.html
+++ b/app/static/maraudersmap/index.html
@@ -21,7 +21,7 @@
                             <li><a id="moreinfo" ><img src ="images/icons/1429420271_circle_info_more-information_detail_-256.png"/>More Info</a>
                         </ul>
                     </div>
-                    <a id="logout"></a>
+					<a id="logout" href="../.."></a>
                 </div>
             </div>
         </div>
